bad/bin_op_eq_bool_void.example_compiler_output
ERROR
[1mbad/bin_op_eq_bool_void.lat:4:7: [1;31merror: [0;1moperator == cannot compare values of types `boolean` and `void` because values are not convertible to either of the two types[m
	true == foo();
	     [1;32m^[m
